--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
-    <p>Test</p>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lye Software</title>
+</head>
+<body>
+  <h1>Thanks for coming to the Lye Software website.</h1>
+  <h3>Unfortunately we are currently under development, so we cannot give you information here. Please visit any of these links instead: <br> https://github.com/LYE-Software <br> https://nwvbug.com <br> https://rypixel.net</h3>
+</body>
 </html>
