--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>Thanks for coming to the Lye Software website.</h1>
-  <h3>Unfortunately we are currently under development, so we cannot give you information here. Please visit any of these links instead: <br> https://github.com/LYE-Software <br> https://nwvbug.com <br> https://rypixel.net</h3>
+  <h3>Unfortunately we are currently under development, so we cannot give you information here. Please visit any of these links instead: <br>Lye Software GitHub page: https://github.com/LYE-Software <br>:Lye Software subsidiary NWVBUG Development https://nwvbug.com <br>Lye Software subsidiary RyCorp https://rypixel.net</h3>
 </body>
 </html>
