at least something will be there

--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lye Software</title>
+    <script src="code.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Thanks for coming to the Lye Software website.</h1>
-  <h3>Unfortunately we are currently under development, so we cannot give you information here. Please visit any of these links instead: <br>Lye Software GitHub page: https://github.com/LYE-Software <br>:Lye Software subsidiary NWVBUG Development https://nwvbug.com <br>Lye Software subsidiary RyCorp https://rypixel.net</h3>
+  <div class="sameline">
+    <img src="lye.png" class="topleftlogo">
+    <button class="headerchoice">Education</button>
+    <button class="headerchoice">Gaming</button>
+    <button class="headerchoice">Artifical Intelligence</button>
+    <button class="headerchoice">Transportation</button>
+
+    <div class="specialflex">
+      <button class="specialbutton">NWVBUG</button>
+      <br>
+      <button class="specialbutton2">RyCorp</button>
+    </div>
+
+
+  </div>
+
+  <div class="largeflex">
+
+    <div class="smallbox">
+      <h1 class="header">Products of the future, delivered today.</h1>
+    </div>
+
+    <div class="smallbox">
+      <img src="all 3 logos.png" class="largebanner">
+    </div>
+
+    <div class="smallbox">
+      <h1 class="header">Many trustworthy & quality brands.</h1>
+      <button class="mainbutton">Learn More About Brand Identity</button>
+    </div>
+
+    <div class="smallbox">
+      <h1 class="header">Huge Variety in Product Genre</h1>
+      <button class="mainbutton">Why We Don't Specialize</button>
+    </div>
+
+
+  </div>
+
 </body>
 </html>
