--- a/index.html
+++ b/index.html
@@ -8,44 +8,67 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="sameline">
+  
+  <div class="sameline topheader">
     <img src="lye.png" class="topleftlogo">
-    <button class="headerchoice">Education</button>
-    <button class="headerchoice">Gaming</button>
-    <button class="headerchoice">Artifical Intelligence</button>
-    <button class="headerchoice">Transportation</button>
-
+    <div class="sameline">
+      <button class="headerchoice">Education</button>
+      <button class="headerchoice">Gaming</button>
+      <button class="headerchoice">Artifical Intelligence</button>
+      <button class="headerchoice">Transportation</button>
+    </div>
     <div class="specialflex">
       <button class="specialbutton">NWVBUG</button>
-      <br>
-      <button class="specialbutton2">RyCorp</button>
+      <!-- <br> -->
+      <button class="specialbutton">RyCorp</button>
     </div>
-
-
   </div>
 
-  <div class="largeflex">
-
+  <div class="largeflex fullheight">
     <div class="smallbox">
       <h1 class="header">Products of the future, delivered today.</h1>
     </div>
-
-    <div class="smallbox">
+    <div class="sameline" style="flex-wrap: wrap;">
+      <div class="splitpanel specialflex">
+        <img src="images/bgnwvbugicon.png" style="border-radius:20px; width: 50%">
+        <h1 class="header">NWVBUG Development</h1>
+        <button class="mainbutton">NWVBUG Products and Creative Vision</button>
+      </div>
+      <div class="splitpanel specialflex">
+        <img src="images/rycorp.png" style="border-radius:20px; width: 50%">
+        <h1 class="header">RyCorp</h1>
+        <button class="mainbutton">RyCorp Products and Creative Vision</button>
+      </div>
+    </div>
+    <!-- <div class="smallbox">
       <img src="all 3 logos.png" class="largebanner">
-    </div>
-
-    <div class="smallbox">
-      <h1 class="header">Many trustworthy & quality brands.</h1>
-      <button class="mainbutton">Learn More About Brand Identity</button>
-    </div>
-
-    <div class="smallbox">
-      <h1 class="header">Huge Variety in Product Genre</h1>
-      <button class="mainbutton">Why We Don't Specialize</button>
-    </div>
-
-
+    </div> -->
   </div>
 
+  <div class="sameline halfheight" style="flex-wrap: wrap;">
+    <div class="largeflex splitpanel">
+      <div class="smallbox">
+        <h1 class="header">Many trustworthy & quality brands.</h1>
+        <button class="mainbutton">Learn More About Brand Identity</button>
+      </div>
+  
+      <div class="smallbox">
+        <h1 class="header">Huge Variety in Product Genre</h1>
+        <button class="mainbutton">Why We Don't Specialize</button>
+      </div>
+    </div>
+
+    <div class="largeflex splitpanel">
+      <div class="smallbox">
+        <h1 class="header">Many trustworthy & quality brands.</h1>
+        <button class="mainbutton">Learn More About Brand Identity</button>
+      </div>
+  
+      <div class="smallbox">
+        <h1 class="header">Huge Variety in Product Genre</h1>
+        <button class="mainbutton">Why We Don't Specialize</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
